# csv-server

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
csv_server/: __init__.py  app.py  cli.py  config.py  exceptions.py  query.py  resources.py  utils_csv_ids.py  version.py
csv_server/storage/: __init__.py  base.py  csv_store.py
examples/: config.yaml
examples/data/: orders.csv  schemas.json
tests/: test_api.py  test_utils_csv_ids.py
