[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-server"
version = "0.1.0"
description = "A FastAPI-based REST API server for CSV files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["csv", "api", "rest", "fastapi", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "pyyaml>=5.4.0",
    "portalocker>=2.0.0",
    "click>=8.0.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "httpx>=0.23.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "isort>=5.10.0",
    "coverage>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/csv-server"
Repository = "https://github.com/yourusername/csv-server"
Issues = "https://github.com/yourusername/csv-server/issues"

[project.scripts]
csv-server = "csv_server.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["csv_server*"]

[tool.black]
line-length = 100
target-version = ['py38']